syntax = "proto3";

package elastic.apm.v1;

option go_package = "github.com/elastic/apm-data/model/modelpb";

message Agent {
  string name = 1;
  string version = 2;
  string ephemeral_id = 3;
  string activation_method = 4;
}
